// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuDesktop styles renders LinkWrapper correctly 1`] = `
.c0 a {
  text-align: center;
  margin: 0 2px;
  padding: 8px 32px;
  border-radius: 4px;
  background: rgba(0,122,255,0.1);
  color: #006be0;
}

.c0 a:hover {
  color: #007aff;
  background: rgba(0,122,255,0.1);
}

.dark-mode .c0 a {
  color: #fffffe;
  background: rgba(255,255,254,0.16);
}

.dark-mode .c0 a:hover {
  background: rgba(255,255,254,0.16);
}

<span
  class="c0"
/>
`;

exports[`MenuDesktop styles renders LinkWrapper correctly 2`] = `
.c0 a {
  text-align: center;
  margin: 0 2px;
  padding: 8px 32px;
  border-radius: 4px;
  background: none;
  color: #050505;
}

.c0 a:hover {
  color: #007aff;
  background: rgba(0,122,255,0.1);
}

.dark-mode .c0 a {
  color: #fffffe;
  background: none;
}

.dark-mode .c0 a:hover {
  background: rgba(255,255,254,0.16);
}

<span
  class="c0"
/>
`;

exports[`MenuDesktop styles renders MenuDesktopContainer correctly 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (max-width:768px) {
  .c0 {
    display: none;
  }
}

<div
  class="c0"
/>
`;
